--- a/style.css
+++ b/style.css
@@ -1,31 +1,46 @@
-body
-{
-    text-align: center;
-}
+.menu {
 
-#app {
-    background-color: aliceblue;
+    position: fixed;
+    background: white;
+    width: 100%;
+    margin-top : 0px;
+    top:0px;
+    z-index:10;
 }
+    
+    .links {
+    
+    display:inline;
+    padding-left: 33px;
+    padding-right: 25px;
+    font-family: fantasy;
+    font-size:20px
+    }
+    .links:hover { 
+        font-size:25px ;
+        text-decoration:underline;
+    }
 
-#myCarousel
-{
-    background-color: red;
-}
+    #writings { 
+        text-decoration: underline !important;
+        color:green !important;
+    }
+    #contact {
+        background:lightgray ;
+    }
 
-#myCarousel img
-{
-    height: 300px;
-    margin-top: 35px;
-}
- 
-.carousel-inner p
-{
-    margin-top: 15px;
-    color:white;
-    font-size: 20px;
-}
+    .contact_1 h3
+    {
+        display:inline;
+    }
 
 
+
+
+
+   
+    
+    
 
 
 
